# paw-rust-monorepo

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  rust-toolchain.toml
app/avvist-til-oppgave/: Cargo.toml  README.md  nais-dev.yaml
app/avvist-til-oppgave/migrations/: 20260204120408_avvist_meldinger.sql  20260204120408_oppgaver.sql
app/avvist-til-oppgave/nais/: nais-dev.yaml  nais-prod.yaml
app/avvist-til-oppgave/src/: avvist_hendelse.rs  avvist_melding_status.rs  config.rs  consumer.rs  db.rs  get_env.rs  get_kafka_config.rs  hendelse_processor.rs  kafka_hwm.rs  kafka_message_processor.rs  main.rs  message_processor.rs  opprett_oppgave_task.rs  process_hendelselogg_message.rs  process_oppgavehendelse_message.rs  process_startet_hendelse.rs
app/avvist-til-oppgave/tests/: api.http  http-client.env.json
app/kafka-topic-backup/: Cargo.toml  Dockerfile  README.md
app/kafka-topic-backup/config/: config.toml
app/kafka-topic-backup/migrations/: 20251002094059_hwm_table.sql  20251002094118_data_table.sql  20260408131839_hwm_add_version.sql
app/kafka-topic-backup/nais/: nais-dev.yaml  nais-prod.yaml
app/kafka-topic-backup/src/: config.rs  errors.rs  lib.rs  logging.rs  main.rs  metrics.rs
app/kafka-topic-backup/tests/: hwm_sql_tests.rs  lagre_melding_test.rs
app/kartlegging-api/: AGENT_PLAN.md  AGENT_PLAN_REVISED.md  AGENT_PLAN_V2.md  Cargo.toml  README.md
app/kartlegging-api/migrations/: 20260529020000_initiell_modell.sql  20260529090000_initiell_modell.sql  20260529100000_initielle_indekser.sql  20260605060000_dummy_data.sql  20260626060000_dummy_data.sql  20260626070000_dummy_data.sql  20260626080000_dummy_data.sql
app/kartlegging-api/migrations_dev/: 20260529020000_initiell_modell.sql  20260529030000_initielle_indekser.sql  20260529100000_sett_hwm_SLETT_MEG.sql
app/kartlegging-api/migrations_testdata/: 20260529090000_initiell_modell.sql  20260529100000_initielle_indekser.sql  20260626060000_dummy_data.sql  20260626070000_dummy_data.sql  20260626080000_dummy_data.sql  20260626090000_dummy_data.sql  20260626100000_dummy_data.sql  20260626110000_dummy_data.sql  20260626120000_dummy_data.sql  20260626140000_dummy_data.sql
app/kartlegging-api/nais/: nais-dev.yaml
app/kartlegging-api/openapi/: spec.yaml
app/kartlegging-api/src/: config.rs  main.rs  server.rs
app/kartlegging-api/tests/: test_kafka_producer.rs
app/oversikt-api/: Cargo.toml  OVERVIEW_LOGIC_PLAN.md  README.md
app/oversikt-api/migrations/: 20260529090000_initiell_modell.sql  20260529100000_initielle_indekser.sql  20260605060000_dummy_data.sql  20260605070000_dummy_data.sql  20260626070000_dummy_data.sql  20260626080000_dummy_data.sql
app/oversikt-api/nais/: nais-dev.yaml
app/oversikt-api/openapi/: spec.yaml
app/oversikt-api/src/: config.rs  lib.rs  main.rs  routes.rs  server.rs
app/oversikt-api/tests/: api-docs.http  api.http  http-client.env.json  test_kafka_producer.rs
app/test-app/: Cargo.toml  Dockerfile  README.md  nais-dev.yaml  test-json-output.sh
app/test-app/migrations/: 20260601150000_demo_table.sql
app/test-app/src/: app_logic.rs  app_state.rs  config.rs  consumer.rs  http_apis.rs  logging.rs  main.rs  nais_http_apis.rs  otel_layer.rs
app/utgang/: Cargo.toml  README.md
app/utgang/migrations/: 20260212055940_hwm_table.sql  20260212060007_data_tables.sql  20260330065217_klar_for_kontroll.sql
app/utgang/nais/: nais-dev.yaml
app/utgang/src/: consumer_function.rs  db_ops.rs  db_read_ops.rs  db_write_ops.rs  kontroler_pdl_info.rs  lib.rs  main.rs  oppdater_pdl_data.rs  pdl_oppdatering_task.rs  pdl_query.rs  status_oppdatering.rs
app/utgang/tests/: consumer_function_test.rs  dao_test.rs  hent_klar_for_kontroll_test.rs  oppdater_pdl_data_test.rs  pdl_oppdatering_test.rs  perioder_test.rs  sql_tests.rs  utgang_hendelser_logg_test.rs
domain/dab_oppfolgingperioder/: Cargo.toml
domain/dab_oppfolgingperioder/src/: kontor.rs  lib.rs  oppfolgingsperiode.rs
domain/eksterne_hendelser/: Cargo.toml
domain/eksterne_hendelser/src/: avvikstype.rs  bruker.rs  brukertype.rs  egenvurdering.rs  lib.rs  metadata.rs  opplysninger.rs  periode.rs  periode_serde.rs  profilering.rs  profilert_til.rs  serde.rs  tidspunkt_fra_kilde.rs
domain/eksterne_hendelser/tests/: test_serde.rs
domain/interne_hendelser/: Cargo.toml
domain/interne_hendelser/src/: aarsak.rs  arbeidssoeker_id_flettet_inn.rs  automatisk_id_merge_ikke_mulig.rs  avsluttet.rs  avvist.rs  avvist_stopp_av_periode.rs  hendelse.rs  identitetsnummer_sammenslaatt.rs  lib.rs  opplysninger_om_arbeidssoeker_mottatt.rs  startet.rs
domain/oauth2/: Cargo.toml
domain/oauth2/src/: claim.rs  error.rs  issuer.rs  lib.rs  principal.rs  token.rs
domain/regler_core/: Cargo.toml
domain/regler_core/src/: fakta.rs  lib.rs  regler.rs
domain/regler_inngang/: Cargo.toml
domain/regler_inngang/config/: regler_config.toml
domain/regler_inngang/src/: inngang_regelmotor.rs  inngang_regelsett_v2.rs  inngang_regelsett_v3.rs  lib.rs  regler.rs  utils.rs
lib/axum_health/: Cargo.toml
lib/axum_health/src/: lib.rs  paw_tracing.rs
lib/azure_m2m_client/: Cargo.toml
lib/azure_m2m_client/src/: client.rs  config.rs  error.rs  lib.rs  response.rs
lib/health_and_monitoring/: Cargo.toml
lib/health_and_monitoring/src/: compound_health.rs  lib.rs  logging_filter.rs  nais_otel_setup.rs  otel_json_format_layer.rs  simple_app_state.rs
lib/paw_app_config/: Cargo.toml
lib/paw_app_config/src/: config.rs  config_error.rs  error.rs  lib.rs
lib/paw_error_handling/: Cargo.toml
lib/paw_error_handling/src/: lib.rs  problem_details.rs
lib/paw_key_gen_client/: Cargo.toml
lib/paw_oauth2_resource_server/: Cargo.toml  README.md
lib/paw_otel_tracing/: Cargo.toml
lib/paw_rdkafka/: Cargo.toml
lib/paw_rdkafka_hwm/: Cargo.toml
lib/paw_sqlx/: Cargo.toml
lib/paw_test/: Cargo.toml
lib/paw_texas_resource_server/: Cargo.toml  README.md  TRACING_PLAN.md
lib/pdl_client/: Cargo.toml
lib/texas_client/: Cargo.toml  README.md
test/kafka_broker_testcontainer/: Cargo.toml
test/postgres_testcontainer/: Cargo.toml
(+640 files in other folders)
