[workspace]
resolver = "3"
members = [
    "lib/paw_app_config",
    "lib/axum_health",
    "lib/health_and_monitoring",
    "lib/paw_rust_base",
    "lib/paw_sqlx",
    "lib/paw_rdkafka_hwm",
    "lib/paw_rdkafka",
    "lib/texas_client",
    "lib/paw_test",
    "app/test-app",
    "app/kafka-topic-backup",
    "app/avvist-til-oppgave",
    "app/utgang", "domain/interne_hendelser",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
log = "0.4.29"
log4rs = "1.4.0"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "rt-tokio"] }
prometheus = "0.14.0"
rdkafka = { version = "0.39.0", features = ["ssl-vendored", "tracing", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-env-field = "0.4.0"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "runtime-tokio", "tls-rustls", "macros", "chrono"] }
temp-env = "0.3.6"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
tonic = { version = "0.14.2", features = ["transport"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
thiserror = "2.0"
anyhow = "1.0"
graphql_client = { version = "0.16.0", features = ["reqwest"] }
schema_registry_converter = { version = "4", features = ["avro"] }
apache-avro = "0.21"

testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
