[workspace]
resolver = "3"
members = [
    "domain/types",
    "domain/errors",
    "domain/oauth2",
    "domain/interne_hendelser",
    "domain/eksterne_hendelser",
    "domain/regler_arbeidssoeker",
    "domain/dab_kontortilhorlighet",
    "domain/dab_oppfolgingperioder",
    "domain/pdl_graphql",
    "lib/paw_date_time",
    "lib/paw_error_handling",
    "lib/paw_app_config",
    "lib/axum_health",
    "lib/health_and_monitoring",
    "lib/paw_rust_base",
    "lib/paw_otel_tracing",
    "lib/paw_sqlx",
    "lib/paw_rdkafka",
    "lib/paw_rdkafka_hwm",
    "lib/nais_schema_registry",
    "lib/paw_hendelse_processor",
    "lib/paw_test",
    "lib/paw_key_gen_client",
    "lib/pdl_client",
    "lib/texas_client",
    "lib/paw_oauth2_resource_server",
    "lib/paw_texas_resource_server",
    "app/test-app",
    "app/kafka-topic-backup",
    "app/veileder-oppgave",
    "app/utgang",
    "app/kartlegging-api",
    "test/test_data_generator",
    "test/schema_registry_mock",
    "test/postgres_testcontainer",
    "test/kafka_broker_testcontainer",
    "test/schema_registry_testcontainer",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
syn = "2.0"
quote = "1.0"
rand = "0.10"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.32"
log = "0.4.29"
log4rs = "1.4.0"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "rt-tokio"] }
prometheus = "0.14.0"
rdkafka = { version = "0.39.0", features = ["ssl-vendored", "tracing", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-env-field = "0.4.0"
serde_json = "1.0.149"
sqlx = { version = "0.9", features = ["postgres", "uuid", "runtime-tokio", "tls-rustls", "macros", "chrono", "json"] }
temp-env = "0.3.6"
tokio = { version = "1.5", features = ["full"] }
toml = "1"
tonic = { version = "0.14", features = ["transport"] }
tower = "0.5.3"
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3.2", features = ["env-filter", "fmt", "json", "tracing-log"] }
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
jsonwebtoken = { version = "10.4", features = ["rust_crypto"] }
reqwest = { version = "0.13", features = ["json", "form"] }
thiserror = "2.0"
anyhow = "1.0"
graphql_client = { version = "0.16.0", features = ["reqwest-rustls"] }
mockito = { version = "1.7" }
schema_registry_converter = { version = "4", default-features = false, features = ["avro", "futures", "rustls_tls"] }
apache-avro = "0.21"
strum = { version = "0.28", features = ["derive"] }
serde_with = { version = "3", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
serde_yaml = "0.9"
jsonschema = "0.46"
