[package]
name = "avvist-til-oppgave"
version = "0.1.0"
edition.workspace = true

[dependencies]
paw_rust_base = { path = "../../lib/paw_rust_base" }
paw_rdkafka = { path = "../../lib/paw_rdkafka" }
axum = { workspace = true }
health_and_monitoring = { path = "../../lib/health_and_monitoring" }
axum_health = { path = "../../lib/axum_health" }
paw_sqlx = { path = "../../lib/paw_sqlx" }
paw_rdkafka_hwm = { path = "../../lib/paw_rdkafka_hwm" }
log = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true}

[dev-dependencies]
paw_test = { path = "../../lib/paw_test" }
