[package]
name = "avvist-til-oppgave"
version = "0.1.0"
edition.workspace = true

[features]
nais = ["paw_app_config/nais"]

[dependencies]
interne_hendelser = { path = "../../domain/interne_hendelser" }
paw_rust_base = { path = "../../lib/paw_rust_base" }
paw_app_config = { path = "../../lib/paw_app_config" }
paw_rdkafka = { path = "../../lib/paw_rdkafka" }
texas_client = { path = "../../lib/texas_client" }
axum = { workspace = true }
health_and_monitoring = { path = "../../lib/health_and_monitoring" }
axum_health = { path = "../../lib/axum_health" }
paw_sqlx = { path = "../../lib/paw_sqlx" }
paw_rdkafka_hwm = { path = "../../lib/paw_rdkafka_hwm" }
log = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-env-field = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1.89"
rand = "0.10"
tracing = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
paw_test = { path = "../../lib/paw_test" }
