[package]
name = "kafka-topic-backup"
version = "0.1.0"
edition = "2024"

[lib]
name = "kafka_topic_backup"
path = "src/lib.rs"

[dependencies]
paw_rust_base = { path = "../../lib/paw_rust_base" }
tokio = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
log4rs = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }
rdkafka = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde-env-field = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
temp-env = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }


