[package]
name = "kartlegging-api"
version = "0.1.0"
edition.workspace = true

[features]
nais = ["paw_app_config/nais"]

[lib]
name = "kartlegging_api"
path = "src/lib.rs"

[dependencies]
types = { path = "../../domain/types" }
errors = { path = "../../domain/errors" }
eksterne_hendelser = { path = "../../domain/eksterne_hendelser" }
dab_oppfolgingperioder = { path = "../../domain/dab_oppfolgingperioder" }
paw_date_time = { path = "../../lib/paw_date_time" }
paw_rust_base = { path = "../../lib/paw_rust_base" }
axum_health = { path = "../../lib/axum_health" }
paw_otel_tracing = { path = "../../lib/paw_otel_tracing" }
health_and_monitoring = { path = "../../lib/health_and_monitoring" }
paw_app_config = { path = "../../lib/paw_app_config" }
paw_error_handling = { path = "../../lib/paw_error_handling" }
paw_sqlx = { path = "../../lib/paw_sqlx" }
paw_rdkafka = { path = "../../lib/paw_rdkafka" }
paw_rdkafka_hwm = { path = "../../lib/paw_rdkafka_hwm" }
nais_schema_registry = { path = "../../lib/nais_schema_registry" }
paw_oauth2_resource_server = { path = "../../lib/paw_oauth2_resource_server" }
texas_client = { path = "../../lib/texas_client" }
paw_key_gen_client = { path = "../../lib/paw_key_gen_client" }
pdl_client = { path = "../../lib/pdl_client" }

sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
reqwest = { workspace = true }
rdkafka = { workspace = true }
prometheus = { workspace = true }
schema_registry_converter = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
paw_test = { path = "../../lib/paw_test" }
test_data_generator = { path = "../../test/test_data_generator" }
schema_registry_mock = { path = "../../test/schema_registry_mock" }
postgres_testcontainer = { path = "../../test/postgres_testcontainer" }
pdl_api_mock = { path = "../../test/pdl_api_mock" }
kafka_key_gen_mock = { path = "../../test/kafka_key_gen_mock" }
token_client_stub = { path = "../../test/token_client_stub" }
mockito = { workspace = true }
jsonschema = { workspace = true }
tracing-test = { workspace = true }
futures = { workspace = true }
