[package]
name = "oversikt-api"
version = "0.1.0"
edition.workspace = true

[features]
nais = ["paw_app_config/nais"]

[lib]
name = "oversikt_api"
path = "src/lib.rs"

[dependencies]
errors = { path = "../../domain/errors" }
eksterne_hendelser = { path = "../../domain/eksterne_hendelser" }
paw_rust_base = { path = "../../lib/paw_rust_base" }
axum_health = { path = "../../lib/axum_health" }
health_and_monitoring = { path = "../../lib/health_and_monitoring" }
paw_app_config = { path = "../../lib/paw_app_config" }
paw_error_handling = { path = "../../lib/paw_error_handling" }
paw_sqlx = { path = "../../lib/paw_sqlx" }
paw_texas_resource_server = { path = "../../lib/paw_texas_resource_server" }

sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
serde-env-field = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
temp-env = { workspace = true }
paw_test = { path = "../../lib/paw_test" }
mockito = { workspace = true }
jsonschema = { workspace = true }
