[package]
name = "test-app"
version = "0.1.0"
edition = "2024"

[dependencies]
health_and_monitoring = { path = "../../lib/health_and_monitoring" }
axum_health = { path = "../../lib/axum_health" }
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
prometheus = "0.14.0"
log4rs = "1.4.0"
log = "0.4.28"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "chrono",
] }
serde_json = "1.0"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde-env-field = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
temp-env = "0.3.6"
tracing = { version = "0.1.44" }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "rt-tokio"] }
tonic = { version = "0.14.2", features = ["transport"] }


[dev-dependencies]
testcontainers = "0.16"
testcontainers-modules = { version = "0.4", features = ["postgres"] }
