[package]
name = "test-app"
version = "0.1.0"
edition.workspace = true

[dependencies]
health_and_monitoring = { path = "../../lib/health_and_monitoring" }
axum_health = { path = "../../lib/axum_health" }
paw_rust_base = { path = "../../lib/paw_rust_base" }
tokio = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
log4rs = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde-env-field = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
temp-env = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tonic = { workspace = true }


[dev-dependencies]
