[package]
name = "dab_oppfolgingperioder"
version = "0.1.0"
edition.workspace = true

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
