[package]
name = "eksterne_hendelser"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
serde_with = { workspace = true }
schema_registry_converter = { workspace = true }
thiserror = { workspace = true }
apache-avro = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
