[package]
name = "eksterne_hendelser"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }
strum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_with = { workspace = true }
thiserror = { workspace = true }
apache-avro = { workspace = true }
schema_registry_converter = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
mockito = { workspace = true }
schema_registry_mock = { path = "../../test/schema_registry_mock" }
