[package]
name = "interne_hendelser"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
