[package]
name = "interne_hendelser"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
strum = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
