[package]
name = "oauth2"
version = "0.1.0"
edition.workspace = true

[dependencies]
types = { path = "../../domain/types" }
errors = { path = "../../domain/errors" }

strum = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
axum = { workspace = true }
