[package]
name = "regler_inngang"
version = "0.1.0"
edition.workspace = true

[dependencies]
regler_core = { path = "../regler_core" }
regler_macro = { path = "../regler_macro" }
interne_hendelser = { path = "../interne_hendelser" }
pdl_graphql = { path = "../pdl_graphql" }
paw_app_config = { path = "../../lib/paw_app_config" }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde-env-field = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
temp-env = { workspace = true }
paw_test = { path = "../../lib/paw_test" }