[package]
name = "regler_inngang"
version = "0.1.0"
edition.workspace = true

[dependencies]
interne_hendelser = { path = "../interne_hendelser" }
pdl_graphql = { path = "../pdl_graphql" }
paw_app_config = { path = "../../lib/paw_app_config" }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde-env-field = { workspace = true }