[package]
name = "axum_health"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
health_and_monitoring = { path = "../health_and_monitoring" }
axum = { workspace = true }
tokio = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

