[package]
name = "azure_m2m_client"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tokio = { workspace = true }
