[package]
name = "health_and_monitoring"
version = "0.1.0"
edition = "2024"

[dependencies]
paw_rust_base = { path = "../paw_rust_base" }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tonic = { workspace = true }


