[package]
name = "paw_app_config"
version = "0.1.0"
edition.workspace = true

[features]
nais = []

[dependencies]
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
paw_rust_base = { path = "../paw_rust_base" }