[package]
name = "paw_key_gen_client"
version = "0.1.0"
edition.workspace = true

[dependencies]
types = { path = "../../domain/types" }
texas_client = { path = "../../lib/texas_client" }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-env-field = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
mockito = { workspace = true }
