[package]
name = "paw_oauth2_resource_server"
version = "0.1.0"
edition.workspace = true

[dependencies]
types = { path = "../../domain/types" }
errors = { path = "../../domain/errors" }
paw_error_handling = { path = "../../lib/paw_error_handling" }

anyhow = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde-env-field = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
