[package]
name = "paw_otel_tracing"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

