[package]
name = "paw_rdkafka"
version = "0.1.0"
edition.workspace = true

[dependencies]
paw_rust_base = { path = "../paw_rust_base" }
rdkafka = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-env-field = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }