[package]
name = "paw_rdkafka_hwm"
version = "0.1.0"
edition = "2024"

[dependencies]
paw_sqlx = { path = "../paw_sqlx" }
health_and_monitoring = { path = "../health_and_monitoring" }
paw_rust_base = { path = "../paw_rust_base" }

log = { workspace = true }
rdkafka = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }


