[package]
name = "paw_rdkafka_hwm"
version = "0.1.0"
edition.workspace = true

[dependencies]
health_and_monitoring = { path = "../health_and_monitoring" }

log = { workspace = true }
rdkafka = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
paw_test = { path = "../paw_test" }
tokio = { workspace = true }
sqlx = { workspace = true }


