[package]
name = "paw_sqlx"
version = "0.1.0"
edition.workspace = true

[dependencies]
paw_rust_base = { path = "../paw_rust_base" }
health_and_monitoring = { path = "../health_and_monitoring" }
sqlx = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-env-field = { workspace = true }

