[package]
name = "paw_sqlx"
version = "0.1.0"
edition.workspace = true

[dependencies]
errors = { path = "../../domain/errors" }

sqlx = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-env-field = { workspace = true }
anyhow = { workspace = true }
