[package]
name = "paw_test"
version = "0.1.0"
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
interne_hendelser = { path = "../../domain/interne_hendelser" }
texas_client = { path = "../texas_client" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }