[package]
name = "paw_texas_resource_server"
version = "0.1.0"
edition.workspace = true

[dependencies]
errors = { path = "../../domain/errors" }
oauth2 = { path = "../../domain/oauth2" }
paw_error_handling = { path = "../../lib/paw_error_handling" }

axum = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-env-field = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
