[package]
name = "kafka_broker_testcontainer"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["kafka"] }
