[package]
name = "postgres_testcontainer"
version = "0.1.0"
edition.workspace = true

[dependencies]
uuid = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
